--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "groovy"
+apply plugin: 'java-gradle-plugin'
 apply plugin: 'maven'
+apply plugin: 'idea'
 
 buildscript {
 	repositories {
@@ -14,17 +16,30 @@ buildscript {
 
 apply plugin: "com.gradle.plugin-publish"
 
+apply from: "$rootDir/gradle/functional-test.gradle"
+
+
 repositories {
 	jcenter()
 }
 
 dependencies {
 	compile gradleApi()
-	compile localGroovy() 
+	compile localGroovy()
+    testCompile('org.spockframework:spock-core:1.1-groovy-2.4') {
+        exclude group: 'org.codehaus.groovy'
+    }
 }
 
-version = "1.0.7"
+version = "1.0.8-SNAPSHOT"
 group = "com.mageddo"
+
+idea{
+    module{
+        inheritOutputDirs = false
+        outputDir = compileGroovy.destinationDir
+    }
+}
 
 pluginBundle {
 	website = 'https://github.com/mageddo/gradle-embed-maven-repo'
