--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ jdk:
   - oraclejdk8
 sudo: false
 
-script: "./gradlew clean check"
+script:
+   - "./gradlew clean check --info"
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
